atualizando texto alt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="right-login">
             <h1>Efetue o login<br>e faça a diferença</h1>
-            <img src="/img/forest.svg" class="right-login-image" alt="animação de um homem andando de bicicleta com uma paisagem da natureza no fundo">
+            <img src="/img/forest.svg" class="right-login-image" alt="imagem com paisagem da natureza no fundo">
         </div>
 
     </div>
